--- a/Views/Route/CreateRoute.cshtml
+++ b/Views/Route/CreateRoute.cshtml
@@ -304,6 +304,7 @@
 									<!-- input -->
 									<div class="mb-3 col-lg-6">
 										<label class="form-label">Distance</label>
+										<span style="color:red">*</span>
 										<input asp-for="Distance" class="form-control" required />
 										<span asp-validation-for="Distance" class="text-danger"></span>
 									</div>
