--- a/Views/ScheduleMaster/EditTrainSchedule.cshtml
+++ b/Views/ScheduleMaster/EditTrainSchedule.cshtml
@@ -278,7 +278,7 @@
 									<!-- input -->
 									<div class="mb-3 col-lg-6">
 										<label class="form-label">Train Code</label>
-										<select asp-for="Train.TrainCode" class="form-select" asp-items="@ViewBag.listTrain">
+										<select asp-for="Train.Code" class="form-select" asp-items="@ViewBag.listTrain">
 																			
 										</select>
 									</div>
@@ -298,11 +298,11 @@
 									<!-- input -->
 									<div class="mb-3 col-lg-6">
 										<label class="form-label">Start At</label>
-										<input asp-for="StartAt" class="form-control"  />
+										<input asp-for="Departure" class="form-control"  />
 									</div>
 									<div class="mb-3 col-lg-6">
 										<label class="form-label">End At</label>
-										<input asp-for=EndAt class="form-control flatpickr"  />
+										<input asp-for=Arrival class="form-control flatpickr"  />
 									</div>
 
 									<div></div>
@@ -312,12 +312,12 @@
 										<label class="form-label" id="productSKU">Status</label>
 										<br />
 										<div class="form-check form-check-inline">
-											<input class="form-check-input" type="radio" asp-for="IsCompleted" value="True" checked />
+											<input class="form-check-input" type="radio" asp-for="IsFinished" value="True" checked />
 											<label class="form-check-label" for="inlineRadio1">Active</label>
 										</div>
 										<!-- input -->
 										<div class="form-check form-check-inline">
-											<input class="form-check-input" type="radio" asp-for="IsCompleted" value="False" />
+											<input class="form-check-input" type="radio" asp-for="IsFinished" value="False" />
 											<label class="form-check-label" for="inlineRadio2">Disabled</label>
 										</div>
 										<!-- input -->
