--- a/Views/Shared/_AdminNavbar.cshtml
+++ b/Views/Shared/_AdminNavbar.cshtml
@@ -65,7 +65,7 @@
 					<a class="nav-link " href="/TicketManager/TicketManager">
 						<div class="d-flex align-items-center">
 							<span class="nav-link-icon iconAdminNavbar"><i class="bi bi-ticket"></i></span>
-							<span class="nav-link-text iconAdminNavbar">Ticket</span>
+							<span class="nav-link-text iconAdminNavbar">Booking</span>
 						</div>
 					</a>
 				</li>
