--- a/Views/RouteDetail/RouteDetailList.cshtml
+++ b/Views/RouteDetail/RouteDetailList.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Railway_Group01.Data.RouteDetails>
+﻿@model IEnumerable<Railway_Group01.Data.RouteDetail>
 @{
 	Layout = null;
 
@@ -275,18 +275,11 @@
 								<!-- form -->
 								<div class="col-lg-4 col-md-6 col-12 mb-2 mb-lg-0">
 									<form class="d-flex" role="search">
-										<input class="form-control" type="search" placeholder="Search Products" aria-label="Search" />
+										<input class="form-control" type="search" placeholder="Search RouteDetail" aria-label="Search" />
 									</form>
 								</div>
 								<!-- select option -->
-								<div class="col-lg-2 col-md-4 col-12">
-									<select class="form-select">
-										<option selected>Status</option>
-										<option value="1">Active</option>
-										<option value="2">Deactive</option>
-										<option value="3">Draft</option>
-									</select>
-								</div>
+								
 							</div>
 						</div>
 						<!-- card body -->
