--- a/Views/ScheduleMaster/CreateTrainSchedule.cshtml
+++ b/Views/ScheduleMaster/CreateTrainSchedule.cshtml
@@ -2,6 +2,7 @@
 @{
 	Layout = null;
 	var listRoute = ViewData["listroute"] as List<Railway_Group01.Data.Route>;
+	var listTrain = ViewData["listTrain"] as List<Railway_Group01.Data.Train>;
 }
 
 <!-- Required meta tags -->
@@ -274,11 +275,22 @@
 							<h4 class="mb-4 h5 mt-5">Train Schedule Information</h4>
 							<form asp-action="CreateTrainSchedule" method="post">
 								<div class="row">
+									<div class="mb-3 col-lg-6">
+										<label class="form-label">Name Trains</label>
+										<span style="color:red">*</span>
+										<input asp-for="Name" class="form-control" placeholder="Name Train" />
+									</div>
 									<!-- input -->
 									<div class="mb-3 col-lg-6">
 										<label class="form-label">Train</label>
-										<select class="form-select" asp-for="Train.TrainCode" asp-items="@ViewBag.ListTrain">
-											
+										<select class="form-select" asp-for="TrainCode">
+											@if (listRoute != null)
+											{
+												@foreach (var train in listTrain)
+												{
+													<option value="@train.Code">@train.Code</option>
+												}
+											}
 										</select>
 									</div>
 									<!-- input -->
@@ -297,13 +309,15 @@
 									<!-- input -->
 									<div class="mb-3 col-lg-6">
 										<label class="form-label">Start At</label>
-										<input asp-for="StartAt" class="form-control" required />
-										<span asp-validation-for="StartAt" class="text-danger"></span>
+										<span style="color:red">*</span>
+										<input asp-for="Departure" class="form-control" required />
+										<span asp-validation-for="Departure" class="text-danger"></span>
 									</div>
 									<div class="mb-3 col-lg-6">
 										<label class="form-label">End At</label>
-										<input asp-for="EndAt" class="form-control flatpickr"  />
-										<span asp-validation-for="EndAt" class="text-danger"></span>
+										<span style="color:red">*</span>
+										<input asp-for="Arrival" class="form-control flatpickr"  required/>
+										<span asp-validation-for="Arrival" class="text-danger"></span>
 									</div>
 
 									<div></div>
@@ -313,12 +327,12 @@
 										<label class="form-label" id="productSKU">Status</label>
 										<br />
 										<div class="form-check form-check-inline">
-											<input class="form-check-input" type="radio" asp-for="IsCompleted" value="True" checked />
+											<input class="form-check-input" type="radio" asp-for="IsFinished" value="True" checked />
 											<label class="form-check-label" for="inlineRadio1">Active</label>
 										</div>
 										<!-- input -->
 										<div class="form-check form-check-inline">
-											<input class="form-check-input" type="radio" asp-for="IsCompleted" value="False" />
+											<input class="form-check-input" type="radio" asp-for="IsFinished" value="False" />
 											<label class="form-check-label" for="inlineRadio2">Disabled</label>
 										</div>
 										<!-- input -->
