--- a/Views/StationMaster/CreateStation.cshtml
+++ b/Views/StationMaster/CreateStation.cshtml
@@ -279,25 +279,30 @@
 										<!-- input -->
 										<div class="mb-3 col-lg-6">
 											<label class="form-label">Station Code</label>
-											<input asp-for="Code" class="form-control" placeholder="Code" />
+											<span style="color:red">*</span>
+											<input asp-for="Code" class="form-control" placeholder="Code" required/>
 										</div>
 
 										<!-- input -->
 										<div class="mb-3 col-lg-6">
 											<label class="form-label">Station Name</label>
-											<input asp-for="Name" class="form-control" placeholder="Name" />
+											<span style="color:red">*</span>
+											<input asp-for="Name" class="form-control" placeholder="Name" required/>
 										</div>
 										<div class="mb-3 col-lg-6">
 											<label class="form-label">Name Of Division</label>
-											<input asp-for="NameOfDivision" class="form-control" placeholder="NameOfDivision" />
+											<span style="color:red">*</span>
+											<input asp-for="NameOfDivision" class="form-control" placeholder="NameOfDivision" required/>
 										</div>
 										<div class="mb-3 col-lg-6">
 											<label class="form-label">Zone</label>
-											<input asp-for="Zone" class="form-control" placeholder="Zone" />
+											<span style="color:red">*</span>
+											<input asp-for="Zone" class="form-control" placeholder="Zone" required/>
 										</div>
 										<div class="mb-3 col-lg-6">
 											<label class="form-label">ZipCode</label>
-											<input asp-for="ZipCode" class="form-control" placeholder="Zipcode" />
+											<span style="color:red">*</span>
+											<input asp-for="ZipCode" class="form-control" placeholder="Zipcode" required/>
 										</div>
 									</div>
 
