--- a/Views/TicketManager/TicketManager.cshtml
+++ b/Views/TicketManager/TicketManager.cshtml
@@ -248,19 +248,17 @@
 					<!-- page header -->
 					<div class="d-md-flex justify-content-between align-items-center">
 						<div>
-							<h2>Train Schedule</h2>
+							<h2>Booking</h2>
 							<!-- breacrumb -->
 							<nav aria-label="breadcrumb">
 								<ol class="breadcrumb mb-0">
 									<li class="breadcrumb-item"><a href="#" class="text-inherit">Dashboard</a></li>
-									<li class="breadcrumb-item active" aria-current="page">Train Schdule</li>
+									<li class="breadcrumb-item active" aria-current="page">Booking</li>
 								</ol>
 							</nav>
 						</div>
 						<!-- button -->
-						<div>
-							<a href="/ScheduleMaster/CreateTrainSchedule" class="btn btn-me">Add Schedule</a>
-						</div>
+
 					</div>
 				</div>
 			</div>
@@ -274,18 +272,11 @@
 								<!-- form -->
 								<div class="col-lg-4 col-md-6 col-12 mb-2 mb-lg-0">
 									<form class="d-flex" role="search">
-										<input class="form-control" type="search" placeholder="Search Products" aria-label="Search" />
+										<input class="form-control" type="search" placeholder="Search Booking" aria-label="Search" />
 									</form>
 								</div>
 								<!-- select option -->
-								<div class="col-lg-2 col-md-4 col-12">
-									<select class="form-select">
-										<option selected>Status</option>
-										<option value="1">Active</option>
-										<option value="2">Deactive</option>
-										<option value="3">Draft</option>
-									</select>
-								</div>
+							
 							</div>
 						</div>
 						<!-- card body -->
@@ -295,18 +286,13 @@
 								<table class="table table-centered table-hover text-nowrap table-borderless mb-0 table-with-checkbox">
 									<thead class="bg-light">
 										<tr>
-											<th class="colerth">PNRNo</th>
-											<th class="colerth">Price</th>
-											<th class="colerth">Compartment</th>
-											<th class="colerth">Seat No</th>
-											<th class="colerth">Status</th>
-											<th class="colerth">Schedule Id</th>
-											<th class="colerth">Coach Id</th>
-											<th class="colerth">CIDNo</th>
-											<th class="colerth">Action</th>
+											<th class="colerth">Id</th>
+											<th class="colerth">UserId</th>
+											<th class="colerth">Created At</th>
+
 										</tr>
 									</thead>
-									@foreach (var item in Model)
+									@* @foreach (var item in Model)
 									{
 										<tbody>
 											<tr>
@@ -314,7 +300,7 @@
 													@item.PNRNo
 												</td>
 												<td>@item.Price</td>
-												<td>@item.CompartmentNo</td>
+												<td>@item.</td>
 												<td>@item.SeatNo</td>											
 												<td>
 													<span class="badge bg-light-primary text-dark-primary">@item.Status</span>
@@ -329,7 +315,7 @@
 												</td>
 											</tr>
 										</tbody>
-									}
+									} *@
 
 								</table>
 							</div>
