--- a/Views/TrainMaster/CreateTrain.cshtml
+++ b/Views/TrainMaster/CreateTrain.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Railway_Group01.Data.Train
 @{
-	ViewData["Title"] = "CreateTrain";
+	var listType = ViewData["listType"] as List<Railway_Group01.Data.TrainType>;
 	Layout = null;
 }
 
@@ -276,17 +276,25 @@
 								<div class="row">
 									<!-- input -->
 									<div class="mb-3 col-lg-6">
+										
 										<label class="form-label">Train Code</label>
-										<input asp-for="TrainCode" class="form-control" placeholder="Train Code" required />
+										<span asp-validation-for="Code" style="color:red">*</span>
+										<input asp-for="Code" class="form-control" placeholder="Train Code" required/>
+										
 									</div>
 									<!-- input -->
-									<div class="mb-3 col-lg-6">
-										<label class="form-label">Train Name</label>
-										<input asp-for="Name" class="form-control" placeholder="Train Name" required />
-									</div>
+								
 									<div class="mb-3 col-lg-6">
 										<label class="form-label">Type</label>
-										<input asp-for="Type" class="form-control" placeholder="Type" required />
+										<select class="form-select" asp-for="TypeCode">
+											@if (listType != null)
+											{
+												@foreach (var type in listType)
+												{
+													<option value="@type.Code">@type.Name</option>
+												}
+											}
+										</select>
 									</div>
 									<!-- input -->
 									<div class="mb-3 col-lg-6">
@@ -306,10 +314,7 @@
 
 
 										<!-- input -->
-										<div class="mb-3">
-											<label class="form-label"> Description</label>
-											<textarea asp-for="Description" class="form-control" rows="3" placeholder="Description"></textarea>
-										</div>
+										
 									</div>
 									<div class="col-lg-12">
 										<input type="submit" value="Create Trains" class="btn btn-me" />
