--- a/Views/TrainMaster/EditTrain.cshtml
+++ b/Views/TrainMaster/EditTrain.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Railway_Group01.Data.Train
 @{
-	ViewData["Title"] = "EditTrain";
+	var listType = ViewData["listType"] as List<Railway_Group01.Data.TrainType>;
 	Layout = null;
 }
 
@@ -275,15 +275,20 @@
 							<form asp-action="EditTrain" method="post">
 								<div class="row">
 									<!-- input -->
-										<input asp-for="TrainCode" type="hidden" />
+										<input asp-for="Code" type="hidden" />
 									<!-- input -->
-									<div class="mb-3 col-lg-6">
-										<label class="form-label">Train Name</label>
-										<input asp-for="Name" class="form-control" placeholder="Train Name" required />
-									</div>
+						
 									<div class="mb-3 col-lg-6">
 										<label class="form-label">Type</label>
-										<input asp-for="Type" class="form-control" placeholder="Type" required />
+										<select class="form-select" asp-for="TypeCode">
+											@if (listType != null)
+											{
+												@foreach (var type in listType)
+												{
+													<option value="@type.Code">@type.Name</option>
+												}
+											}
+										</select>
 									</div>
 									<!-- input -->
 									<div class="mb-3 col-lg-6">
@@ -302,11 +307,7 @@
 									<div class="mb-3 col-lg-12 mt-5">
 
 
-										<!-- input -->
-										<div class="mb-3">
-											<label class="form-label"> Description</label>
-											<textarea asp-for="Description" class="form-control" rows="3" placeholder="Description"></textarea>
-										</div>
+									
 									</div>
 									<div class="col-lg-12">
 										<input type="submit" value="Edit Train" class="btn btn-me" />
